2004-03-12  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* PATCHLEVEL: Raised to 2 for new release candidate.

	* src/version.c: Updated.

	* docs/doc2texi.el (d2t-texi-header): Updated version to 4.0,
	changed "organized by" entry from Dave to Lars.  Added Copyright
	year entry for 2004.

	* docs/titlepag.ms: Likewise.

	* docs/gnuplot.texi: Regenerated.

	* docs/Makefile.in ($(srcdir)/gnuplot.texi): Renamed rule target
	to include $(srcdir).  Fixed copy command to pull gnuplot.doc,
	into build directory, not gnuplot.texi.

2004-03-11  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	The fix for SF bug "[905651] Grid and border overlap the plot".
	This is rather elaborate, unfortunately:
	
	* src/graph3d.c (USE_GRID_LAYERS): New feature test macro.  Turned
	on automatically for now. If PM3D is on , this is forced on, too.
	(whichgrid): Removed global variable.
	(do_3dplot) [USE_GRID_LAYERS]: Draw back part of grid before the
	plotted data/functions, and front part afterwards, by passing a
	new argument to draw_3d_graphbox().
	(draw_3d_graphbox): Added new argument 'whichgrid' to control
	which parts of the graph box will be drawn.  Default is ALLGRID,
	i.e. draw all of it.  All calls updated accordingly.
	(draw_3d_graphbox) [USE_GRID_LAYERS]: Use new parameter to decide
	which parts to actually draw.  Changed #if PM3D to USE_GRID_LAYERS
	to enable this former PM3D-only code for general usage.
	(xtick_callback, ytick_callback, ztick_allback): Removed former
	PM3D-only checks --- they're done in graphbox now, before calling
	gen_tics().

	* src/pm3d.h (PM3D_HAVE_SOLID): New macro, default value zero.
	Disables pm3d option {transparent|solid}, which is no longer
	needed --- it's a duplicate of what 'set grid front' already
	achieves.
	(pm3d_struct) [!PM3D_HAVE_SOLID]: Remove struct field
	corresponding to disabled option.

	* src/pm3d.c (pm3d) [!PM3D_HAVE_SOLID]: Remove initializer of
	removed struct field.